changes to latex

--- a/latex/Config/1_novathesis.tex
+++ b/latex/Config/1_novathesis.tex
@@ -122,7 +122,7 @@
 %                               %     after the cover pages
 %                               % DEFAULT: statement=false
 
-%\ntsetup{printcopyright=false} % Shall the copyright message be printed??
+\ntsetup{printcopyright=false} % Shall the copyright message be printed??
 %                               % DEFAULT: printcopyright=true
 
 % \ntsetup{cdcover=true}        % Shall a “cd cover” be printed at the end of
