--- a/latex/Config/2_biblatex.tex
+++ b/latex/Config/2_biblatex.tex
@@ -49,4 +49,4 @@
 
 %%------------------------------------------------------------
 %% APA-LIKE CITATION
-\ntbibsetup{backend=biber, natbib=true, style=apa6}
+\ntbibsetup{backend=biber, natbib=true,maxcitenames=2, style=apa}
