Mauro's revision updates

--- a/latex/Bibliography/bibliography.bib
+++ b/latex/Bibliography/bibliography.bib
@@ -29,7 +29,7 @@
    publisher={Global Science Press},
    author={Lu, Lu},
    year={2020},
-   month={Jun},
+   month={06},
    pages={1671–1706}
 }
 @misc{klambauer2017selfnormalizing,
@@ -60,7 +60,7 @@ year = {2010}
   title = 	 {Beyond the Pareto Efficient Frontier: Constraint Active Search for Multiobjective Experimental Design},
   author =       {Malkomes, Gustavo and Cheng, Bolong and Lee, Eric H and Mccourt, Mike},
   booktitle = 	 {Proceedings of the 38th International Conference on Machine Learning},
-  pages = 	 {7423--7434},
+  pages = 	 {7423-7434},
   year = 	 {2021},
   editor = 	 {Meila, Marina and Zhang, Tong},
   volume = 	 {139},
@@ -255,15 +255,6 @@ month = {08},
 year = {2017}
 }
 
-@Misc{chen2016semantic,
-      title={Semantic Image Segmentation with Deep Convolutional Nets and Fully Connected CRFs}, 
-      author={Liang-Chieh Chen and George Papandreou and Iasonas Kokkinos and Kevin Murphy and Alan L. Yuille},
-      year={2016},
-      eprint={1412.7062},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
-}
-
 @Misc{chen2017deeplab,
       title={DeepLab: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected CRFs}, 
       author={Liang-Chieh Chen and George Papandreou and Iasonas Kokkinos and Kevin Murphy and Alan L. Yuille},
@@ -393,7 +384,7 @@ doi = {10.1117/12.2554417}
 	url = {https://doi.org/10.1007%2F978-3-319-50835-1_22},
 	year = 2016,
 	publisher = {Springer International Publishing},
-	pages = {234--244},
+	pages = {234-244},
 	author = {Md Atiqur Rahman and Yang Wang},
 	title = {Optimizing Intersection-Over-Union in Deep Neural Networks for Image Segmentation},
 	booktitle = {Advances in Visual Computing}
@@ -403,7 +394,7 @@ doi = {10.1117/12.2554417}
   title = 	 {Understanding the difficulty of training deep feedforward neural networks},
   author = 	 {Glorot, Xavier and Bengio, Yoshua},
   booktitle = 	 {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
-  pages = 	 {249--256},
+  pages = 	 {249-256},
   year = 	 {2010},
   editor = 	 {Teh, Yee Whye and Titterington, Mike},
   volume = 	 {9},
@@ -473,7 +464,7 @@ url = {https://www.sciencedirect.com/science/Article/pii/B9780124095489119256},
 author = {Julian Murton},
 }
 
-@incollection{book1,
+@incollection{monitoringperma,
     author = {Osterkamp, T.E. and Jorgenson, M.T.},
     isbn = {9780813760322},
     title = "{Permafrost conditions and processes}",
@@ -618,7 +609,7 @@ series = {NIPS'12}
 	year = {2020},
 	month = {08},
 	publisher = {Springer Singapore},
-	pages = {269--279},
+	pages = {269-279},
 	author = {Jacopo Ferretti and Vincenzo Randazzo and Giansalvo Cirrincione and Eros Pasero},
 	title = {1-D Convolutional Neural Network for {ECG} Arrhythmia Classification},
 	booktitle = {Progresses in Artificial Intelligence and Neural Systems}
@@ -716,7 +707,7 @@ TITLE = {EXTRACTION OF BUILT-UP AREAS USING CONVOLUTIONAL NEURAL NETWORKS AND TR
 JOURNAL = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
 VOLUME = {XLII-3},
 YEAR = {2018},
-PAGES = {79--85},
+PAGES = {79-85},
 URL = {https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-3/79/2018/},
 DOI = {10.5194/isprs-archives-XLII-3-79-2018}
 }
@@ -853,14 +844,19 @@ url = {https://www.sciencedirect.com/science/Article/pii/S0034425715300584},
 author = {Ian Olthof and Robert H. Fraser and Carla Schmitt},
 }
 
-@Article{climatechange12,
-title = {Climate change and the permafrost carbon feedback},
-journal = {Nature},
-volume = {520},
-pages = {171–179},
-year = {2015},
-doi = {https://doi.org/10.1038/nature14338},
-author = {chuur E. McGuire, A. Schädel, C. et al.},
+
+@article{climatechange12,
+	title = {Climate change and the permafrost carbon feedback},
+	volume = {520},
+	issn = {1476-4687},
+	url = {https://doi.org/10.1038/nature14338},
+	doi = {10.1038/nature14338},
+  number = {7546},
+	journal = {Nature},
+	author = {Schuur, E. A. G. and McGuire, A. D. and Schädel, C. and Grosse, G. and Harden, J. W. and Hayes, D. J. and Hugelius, G. and Koven, C. D. and Kuhry, P. and Lawrence, D. M. and Natali, S. M. and Olefeldt, D. and Romanovsky, V. E. and Schaefer, K. and Turetsky, M. R. and Treat, C. C. and Vonk, J. E.},
+	month = {04},
+	year = {2015},
+	pages = {171-179},
 }
 
 @Article{climatechangefur,
@@ -870,7 +866,7 @@ volume = {520},
 pages = {627–637},
 year = {2014},
 doi = {https://doi.org/10.1038/ngeo2234},
-author = {Cohen J., Screen J., Furtado J. et al.},
+author = {Cohen J., Screen J., Furtado J. and et al.},
 }
 
 @Article{climatechange34,
@@ -879,18 +875,7 @@ journal = {Nat Commun},
 volume = {11},
 year = {2020},
 doi = {https://doi.org/10.1038/s41467-020-18797-8},
-author = {Calel R., Chapman S.C., Stainforth D.A. et al},
-}
-@InCollection{monitoringperma,
-    author = {Osterkamp, T.E. and Jorgenson, M.T.},
-    isbn = {9780813760322},
-    title = "{Permafrost conditions and processes}",
-    booktitle = "{Geological Monitoring}",
-    publisher = {Geological Society of America},
-    year = {2009},
-    month = {01},
-    doi = {10.1130/2009.monitoring(09)},
-    url = {https://doi.org/10.1130/2009.monitoring(09)},
+author = {Calel R., Chapman S.C., Stainforth D.A. and et al},
 }
 
 @Article{rs13061217,
@@ -919,15 +904,6 @@ DOI = {10.3390/rs13061217}
 	pages = {1329},
 }
 
-
-@Misc{he2015delving,
-      title={Delving Deep into Rectifiers: Surpassing Human-Level Performance on ImageNet Classification}, 
-      author={Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
-      year={2015},
-      eprint={1502.01852},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
-}
 
 @Article{726791,
   author={Lecun, Y. and Bottou, L. and Bengio, Y. and Haffner, P.},
