--- a/latex/Config/5_cover.tex
+++ b/latex/Config/5_cover.tex
@@ -13,7 +13,7 @@
 %%------------------------------------------------------------
 % Thesis/Dissertation title (valid for all languages unless redefined as below)
 %   syntax: \nttitle[lang]{title}
-\nttitle[en]{Retrogressive Thaw Slump identification using U-Net with Satellite Image Inputs}
+\nttitle[en]{Retrogressive Thaw Slump identification using U-Net and Satellite Image Inputs}
 \nttitle[pt]{Um Título de Tese Longo\\e com uma Mudança de Linha Forçada}%
 %   \nttitle{A Very Long and Impressive Thesis Title}%
 %   \nttitle[en]{The title in a Specific language}%
@@ -83,7 +83,7 @@
 %   use [f] for female and [m] for male
 %   use "\\" to break the lines in the appropriate place
 %   syntax: \ntaddperson{coadviser}[gender]{Name, Position, School}
-% \ntaddperson{coadviser}[f]{John Doe Co-Adviser Name, Associate Professor, NOVA University Lisbon}
+\ntaddperson{coadviser}[m]{Ingmar Nitze, PostDoc, Alfred Wegener Institute}
 % \ntaddperson{coadviser}[f]{John Doe other Co-Adviser Name, Full Professor, NOVA University Lisbon}
 
 %%------------------------------------------------------------
