corrections post defence

--- a/latex/Bibliography/bibliography.bib
+++ b/latex/Bibliography/bibliography.bib
@@ -50,12 +50,11 @@ pages = {229-230},
 doi = {10.1029/2010EO260001},
 year = {2010}
 }
-@Misc{nadam,
+@article{nadam,
   title={Incorporating Nesterov Momentum into Adam},
-  author={Timothy Dozat},
-  year={2016}
+  author={Dozat, Timothy},
+  year = {2016}
 }
-
 @InProceedings{pmlr-v139-malkomes21a,
   title = 	 {Beyond the Pareto Efficient Frontier: Constraint Active Search for Multiobjective Experimental Design},
   author =       {Malkomes, Gustavo and Cheng, Bolong and Lee, Eric H and Mccourt, Mike},
@@ -393,7 +392,7 @@ doi = {10.1117/12.2554417}
 @incollection{Rahman_2016,
 	doi = {10.1007/978-3-319-50835-1_22},
 	url = {10.1007%2F978-3-319-50835-1_22},
-	year = 2016,
+	year = {2016},
 	publisher = {Springer International Publishing},
 	pages = {234-244},
 	author = {Md Atiqur Rahman and Yang Wang},
@@ -419,15 +418,17 @@ doi = {10.1117/12.2554417}
 
 
 @Misc{sentinel2,
+year= {2021},
 author={{The European Space Agency}},
  title={The European Space Agency Website},
  url = {https://sentinel.esa.int/web/sentinel/user-guides/sentinel-2-msi}
 }
 
 @Misc{sentinel2_gcp,
-author={Google Cloud},
- title={Sentinel-2 Data Public Dataset Documentation},
- howpublished ={url{https://cloud.google.com/storage/docs/public-datasets/sentinel-2}}
+year= {2021},
+author={{Google Cloud}},
+title={Sentinel-2 Data Public Dataset Documentation},
+url ={https://cloud.google.com/storage/docs/public-datasets/sentinel-2}
 }
 
 @Misc{kingma2017adam,
